frontend/css/queries.css
.widget-checkbox .widget-label {
    width:0!important;
}
.flt-element.flt-row-item.filter-mode {
    color:black!important;
}
.flt-element.flt-row-bullet.filter-mode{
    background:black!important;
}
.flt-row-item{
    overflow-wrap: break-word!important;
}
.flt-row-bullet{
    height: .75em;
    width: .75em;
    border-radius: 100%;
    display: inline-block;
    margin-right: 3px;
    margin-left: 3px;
}
.query-btn{
    background:none;
    border:none;
    padding: 0px;
    margin-right: 3px;
    margin-left: 3px;
}
.btn-toggle{
    color:#3498db;
}
.btn-toggle:hover{
    color:#2980b9;
}
.btn-del{
    color:#e74c3c;
}
.btn-del:hover{
    color:#c0392b;
}
.btn-add{
    color:#2ecc71;
}
.btn-add:hover{
    color:#27ae60;
}

.btn-brush{
     color:#9b59b6;
}
.btn-brush:hover{
     color:#8e44ad;
}
.btn-add.btn-disabled{
    color:#bdc3c7!important;
}

ul.query-row {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display:table;
}

ul.query-row li {
    display:table-cell;
    /*min-width: 72px;*/
}
.widget-inline-hbox .widget-readout {
    max-width: 250px;
    min-width: 100px;
}
.widget-inline-hbox .widget-label {
    /*width: 94px;*/
}
.custom-icon{
    width: 18px;
    height: 18px;
    display: inline-block;
}
.network-icon{
    background-image: url("images/network.svg");
}
.edge-icon{
    width:3px;
    height:10px;
    background: black;
    display:inline-block;
}
h4.module-header{
    background: #fbfbfb;
    border: 1px solid #dedede;
    box-shadow: 0 8px 6px -7px #e8e8e8;
    padding: 5px;
    margin: 0px -2px -2px -6px;
}

.help-btn{
    margin-top: 2px;
    cursor: pointer;
}
.stat-header-wrapper{
    background: #a7a5a533;
    width: 100%;
    margin-left: -2px;
    margin-right: -2px;
    }
ul.stat-header {
    list-style-type: none;
    margin: 2px;
    padding: 2px;
    display:table;
}

ul.stat-header li {
    display:table-cell;
    padding:5px;
}
.stat-header .fa-filter,.stat-header .fa-paint-brush{
    color: #95a5a6;
}
.stat-header .fa-filter.active,.stat-header .fa-paint-brush.active{
    color: #2ecc71;
}
.stat-text{
    font-weight: bold;
}

